refactor: ThreadLocal OOM example